finished for now!

--- a/Notebooks/3-module/4-Dynamic-Breqakpoints.ipynb
+++ b/Notebooks/3-module/4-Dynamic-Breqakpoints.ipynb
@@ -33,11 +33,228 @@
     "\n",
     "Let's create a graph where a **NodeInterrupt** is thrown based upon length of the input."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image, display\n",
+    "\n",
+    "from typing_extensions import TypedDict\n",
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "from langgraph.errors import NodeInterrupt\n",
+    "from langgraph.graph import START, END, StateGraph\n",
+    "\n",
+    "class State(TypedDict):\n",
+    "    input: str\n",
+    "\n",
+    "def step_1(state: State) -> State:\n",
+    "    print(\"---Step 1---\")\n",
+    "    return state\n",
+    "\n",
+    "def step_2(state: State) -> State:\n",
+    "    # Let's optionally raise a NodeInterrupt if the length of the input is longer than 5 characters\n",
+    "    if len(state['input']) > 5:\n",
+    "        raise NodeInterrupt(f\"Received input that is longer than 5 characters: {state['input']}\")\n",
+    "    \n",
+    "    print(\"---Step 2---\")\n",
+    "    return state\n",
+    "\n",
+    "def step_3(state: State) -> State:\n",
+    "    print(\"---Step 3---\")\n",
+    "    return state\n",
+    "\n",
+    "builder = StateGraph(State)\n",
+    "builder.add_node(\"step_1\", step_1)\n",
+    "builder.add_node(\"step_2\", step_2)\n",
+    "builder.add_node(\"step_3\", step_3)\n",
+    "builder.add_edge(START, \"step_1\")\n",
+    "builder.add_edge(\"step_1\", \"step_2\")\n",
+    "builder.add_edge(\"step_2\", \"step_3\")\n",
+    "builder.add_edge(\"step_3\", END)\n",
+    "\n",
+    "# Set up memory\n",
+    "memory = MemorySaver()\n",
+    "\n",
+    "# Compile the graph with memory\n",
+    "graph = builder.compile(checkpointer=memory)\n",
+    "\n",
+    "# View\n",
+    "display(Image(graph.get_graph().draw_mermaid_png()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's run the graph with an input that's longer than 5 characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input': 'hello world'}\n",
+      "---Step 1---\n",
+      "{'input': 'hello world'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "initial_input = {\"input\": \"hello world\"}\n",
+    "thread_config = {\"configurable\": {\"thread_id\": \"1\"}}\n",
+    "\n",
+    "# Run the graph until the first interruption\n",
+    "for event in graph.stream(initial_input, thread_config, stream_mode=\"values\"):\n",
+    "    print(event)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we inspect the graph state at this point, we the node set to execute next (```step_2```)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = graph.get_state(thread_config)\n",
+    "print(state.next)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the ```Interrupt``` is logged to state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(state.tasks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can try to resume the graph from the breakpoint.\n",
+    "\n",
+    "But, this just re-runs the same node!\n",
+    "\n",
+    "Unless state is changed we will be stuck here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input': 'hello world'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for event in graph.stream(None, thread_config, stream_mode=\"values\"):\n",
+    "    print(event)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('step_2',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "state = graph.get_state(thread_config)\n",
+    "print(state.next)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can update state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.update_state(\n",
+    "    thread_config,\n",
+    "    {\"input\": \"hi\"},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input': 'hi'}\n",
+      "---Step 2---\n",
+      "{'input': 'hi'}\n",
+      "---Step 3---\n",
+      "{'input': 'hi'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for event in graph.stream(None, thread_config, stream_mode=\"values\"):\n",
+    "    print(event)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "LangGraph-101-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
